--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.OnlineQuiz">
-        <activity android:name=".ThirdActivity" android:screenOrientation="portrait"></activity>
+        <activity android:name=".ResultActivity" android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".ThirdActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".SecondActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait">
