added remote and local repository, App, DataBase

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.OnlineQuiz">
-        <activity android:name=".TestByBallsActivity" android:screenOrientation="portrait">
-
-        </activity>
+        <activity android:name=".TestResultActivity"></activity>
+        <activity
+            android:name=".TestByBallsActivity"
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".ResultActivity"
             android:screenOrientation="portrait" />
