--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,8 +41,6 @@ dependencies {
 
     implementation "androidx.navigation:navigation-fragment:$nav_version"
 
-
-
     //Room
     def room_version = "2.2.6"
     implementation "androidx.room:room-runtime:$room_version"
@@ -52,6 +50,15 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.4.1'
     implementation 'com.squareup.okhttp3:okhttp-urlconnection:4.4.1'
+
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.8.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
+    implementation 'com.squareup.okhttp:okhttp:2.7.5'
+
+
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation "android.arch.lifecycle:viewmodel:1.1.1"
 
 
 }
