--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,8 @@ dependencies {
     implementation "android.arch.lifecycle:viewmodel:1.1.1"
 
 
+    compile 'com.github.grennis:ExpandableRecyclerView:0.9.3'
+
+
+
 }
